--- a/Lab_2/index.html
+++ b/Lab_2/index.html
@@ -29,7 +29,7 @@
     </address>
 
     <h1>Re: Dover Cliff university application</h1>
-
+    <p>hello</p>
     <p>Dear Dover,</p>
     <p>
       Thank you for your recent application to join us at
