--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-    <title>Audrey's INST377 Spring Test Page</title>
+    <title>Audrey's INST377 Fall Test Page</title>
+    <title>This is Audrey</title>
     </head>
     <body>
        <img src="./red panda.jpg" alt="Red Panda">
