--- a/Lab_3/index.html
+++ b/Lab_3/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
     <head>
     <meta charset="UTF-8" />
-    <title>Audrey</title>
+    <title>CAT</title>
     <link rel="stylesheet" href="./style.css" />
     </head>
     <body>
         <header>
             <h1>Header</h1>
             <img src="./dove.png" alt="BIRD">
-        </header>
        <nav>
            <ul>
             <li><a href="#">HOME</a></li>
@@ -19,23 +18,23 @@
             <li><a href="#">FORUM</a></li>
            </ul>
        </nav>
+    </header>
        <main>
-           <article class="WELCOME">
+           <article>
                <h2>WELCOME</h2>
                <P>Welcome to our fake birdwatching site. If this were a real site, it would be the ideal place to come to learn more about birdwatching, whether you are a beginner looking to learn how to get into birding, or an expert wanting to share ideas, tips, and photos with other like-minded people.</P>
                <p>So don't waste time! Get what you need, then turn off that computer and get out into the great outdoors!</p>
-           </article>
+            </article>
            <aside>
                <h2>FAVOURITE PHOTOS</h2>
-               <img src="./favorite-1.jpg" alt="bird1">
-               <img src="./favorite-2.jpg" alt="bird2">
-               <img src="./favorite-3.jpg" alt="bird3">
-               <img src="./favorite-4.jpg" alt="bird4">
+               <img src="./cat1.jpg" alt="bird1">
+               <img src="./cat2.jpg" alt="bird2">
+               <img src="./cat3.jpg" alt="bird3">
+               <img src="./cat4.jpg" alt="bird4">
             </aside>
-
-
-    
-           </article>
        </main>
+       <footer>
+           <p>This website example has been written by Ka Wai Audrey Tsang, 2020</p>
+       </footer>
     </body>
 </html>
