--- a/Lab_3/index.html
+++ b/Lab_3/index.html
@@ -3,8 +3,16 @@
     <head>
     <meta charset="UTF-8" />
     <title>CAT</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300|Cinzel+Decorative:700" rel="stylesheet">
     <link rel="stylesheet" href="./style.css" />
+       <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
     </head>
+
+
+
+
     <body>
         <header>
             <h1>Header</h1>
@@ -35,6 +43,8 @@
        </main>
        <footer>
            <p>This website example has been written by Ka Wai Audrey Tsang, 2020</p>
+           <p>This fake website example is CC0 — any part of this code may be reused in any way you wish. Original example written by Chris Mills, 2016.</p>
+           <p><a href="http://game-icons.net/lorc/originals/dove.html">Dove icon</a> by Lorc.</p>
        </footer>
     </body>
 </html>
