--- a/Lab_3/index.html
+++ b/Lab_3/index.html
@@ -3,15 +3,12 @@
     <head>
     <meta charset="UTF-8" />
     <title>CAT</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300|Cinzel+Decorative:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&family=Playball&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css" />
-       <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     </head>
-
-
-
 
     <body>
         <header>
