--- a/Lab_3/index.html
+++ b/Lab_3/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>CAT</title>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&family=Playball&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css" />
+    <link href="./style.css" rel="stylesheet" />
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -27,8 +27,7 @@
        <main>
            <article>
                <h2>WELCOME</h2>
-               <P>Welcome to our fake birdwatching site. If this were a real site, it would be the ideal place to come to learn more about birdwatching, whether you are a beginner looking to learn how to get into birding, or an expert wanting to share ideas, tips, and photos with other like-minded people.</P>
-               <p>So don't waste time! Get what you need, then turn off that computer and get out into the great outdoors!</p>
+               <P>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</P>
             </article>
            <aside>
                <h2>FAVOURITE PHOTOS</h2>
