--- a/Lab_3/index.html
+++ b/Lab_3/index.html
@@ -27,6 +27,7 @@
        <main>
            <article>
                <h2>WELCOME</h2>
+               <p>Welcome to my page!</p>
                <P>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</P>
             </article>
            <aside>
@@ -39,7 +40,6 @@
        </main>
        <footer>
            <p>This website example has been written by Ka Wai Audrey Tsang, 2020</p>
-           <p>This fake website example is CC0 — any part of this code may be reused in any way you wish. Original example written by Chris Mills, 2016.</p>
            <p><a href="http://game-icons.net/lorc/originals/dove.html">Dove icon</a> by Lorc.</p>
        </footer>
     </body>
