--- a/Lab_3/index.html
+++ b/Lab_3/index.html
@@ -32,12 +32,12 @@
             </article>
            <aside>
                <h2>FAVOURITE PHOTOS</h2>
-               <img src="./cat1.jpg" alt="bird1">
-               <img src="./cat2.jpg" alt="bird2">
-               <img src="./cat3.jpg" alt="bird3">
-               <img src="./cat4.jpg" alt="bird4">
-            </aside>
-       </main>
+               <img src="./cat1.jpg" alt="baby white british shorthair cat, blue eyes, long tail">
+               <img src="./cat2.jpg" alt="baby blue and white british shorthair cat, red nose, blue eyes">
+               <img src="./cat3.jpg" alt="baby golden british shorthair cat, green eyes, white flur on neck, pink nose ">
+               <img src="./cat4.jpg" alt="baby blue british shorthair, blue eyes, brown nose">
+           </aside>
+            </main>
        <footer>
            <p>This website example has been written by Ka Wai Audrey Tsang, 2020</p>
            <p><a href="http://game-icons.net/lorc/originals/dove.html">Dove icon</a> by Lorc.</p>
