--- a/Lab_3/index.html
+++ b/Lab_3/index.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8" />
     <title>CAT</title>
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&family=Playball&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kufam:ital,wght@0,400;1,900&display=swap" rel="stylesheet">
     <link href="./style.css" rel="stylesheet" />
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -14,17 +14,17 @@
         <header>
             <h1>Header</h1>
             <img src="./dove.png" alt="BIRD">
-       <nav>
-           <ul>
-            <li><a href="#">HOME</a></li>
-            <li><a href="#">GET STARTED</a></li>
-            <li><a href="#">PHOTOS</a></li>
-            <li><a href="#">GEAR</a></li>
-            <li><a href="#">FORUM</a></li>
+            <nav>
+            <ul>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">GET STARTED</a></li>
+                <li><a href="#">PHOTOS</a></li>
+                <li><a href="#">GEAR</a></li>
+                <li><a href="#">FORUM</a></li>
            </ul>
-       </nav>
-    </header>
-       <main>
+            </nav>
+        </header>
+        <main>
            <article>
                <h2>WELCOME</h2>
                <p>Welcome to my page!</p>
@@ -37,10 +37,10 @@
                <img src="./cat3.jpg" alt="baby golden british shorthair cat, green eyes, white flur on neck, pink nose ">
                <img src="./cat4.jpg" alt="baby blue british shorthair, blue eyes, brown nose">
            </aside>
-            </main>
-       <footer>
+        </main>
+        <footer>
            <p>This website example has been written by Ka Wai Audrey Tsang, 2020</p>
            <p><a href="http://game-icons.net/lorc/originals/dove.html">Dove icon</a> by Lorc.</p>
-       </footer>
+        </footer>
     </body>
 </html>
