--- a/Lab_3/index.html
+++ b/Lab_3/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
     <meta charset="UTF-8" />
-    <title>CAT</title>
-    <link href="https://fonts.googleapis.com/css2?family=Kufam:ital,wght@0,400;1,900&display=swap" rel="stylesheet">
+    <title>AUDREY TSANG'S LAB3</title>
+    <link href="https://fonts.googleapis.com/css2?family=Srisakdi:wght@400;700&display=swap" rel="stylesheet">
     <link href="./style.css" rel="stylesheet" />
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -12,7 +12,7 @@
 
     <body>
         <header>
-            <h1>Header</h1>
+            <h1>AUDREY'S CAT</h1>
             <img src="./dove.png" alt="BIRD">
             <nav>
             <ul>
@@ -32,10 +32,10 @@
             </article>
            <aside>
                <h2>FAVOURITE PHOTOS</h2>
-               <img src="./cat1.jpg" alt="baby white british shorthair cat, blue eyes, long tail">
-               <img src="./cat2.jpg" alt="baby blue and white british shorthair cat, red nose, blue eyes">
-               <img src="./cat3.jpg" alt="baby golden british shorthair cat, green eyes, white flur on neck, pink nose ">
-               <img src="./cat4.jpg" alt="baby blue british shorthair, blue eyes, brown nose">
+               <a href="./cat3.jpg"><img src="./cat3_th.jpg" alt="baby white british shorthair cat, blue eyes, long tail"></a>
+               <a href="./cat2.jpg"><img src="./cat2_th.jpg" alt="baby blue and white british shorthair cat, red nose, blue eyes"></a>
+               <a href="./cat1.jpg"><img src="./cat1_th.jpg" alt="baby golden british shorthair cat, green eyes, white flur on neck, pink nose "></a>
+               <a href="./cat4.jpg"><img src="./cat4_th.jpg" alt="baby blue british shorthair, blue eyes, brown nose"></a>
            </aside>
         </main>
         <footer>
