--- a/Lab_3/index.html
+++ b/Lab_3/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
     <meta charset="UTF-8" />
-    <title>AUDREY TSANG'S LAB3</title>
+    <title>AUDREY'S LAB3</title>
     <link href="https://fonts.googleapis.com/css2?family=Srisakdi:wght@400;700&display=swap" rel="stylesheet">
     <link href="./style.css" rel="stylesheet" />
     <!--[if lt IE 9]>
