--- a/Lab_3/index.html
+++ b/Lab_3/index.html
@@ -32,11 +32,14 @@
             </article>
            <aside>
                <h2>FAVOURITE PHOTOS</h2>
+               
+               <div class="img_row">
                <a href="./cat3.jpg"><img src="./cat3_th.jpg" alt="baby white british shorthair cat, blue eyes, long tail"></a>
                <a href="./cat2.jpg"><img src="./cat2_th.jpg" alt="baby blue and white british shorthair cat, red nose, blue eyes"></a>
                <a href="./cat1.jpg"><img src="./cat1_th.jpg" alt="baby golden british shorthair cat, green eyes, white flur on neck, pink nose "></a>
                <a href="./cat4.jpg"><img src="./cat4_th.jpg" alt="baby blue british shorthair, blue eyes, brown nose"></a>
-           </aside>
+            </div>
+            </aside>
         </main>
         <footer>
            <p>This website example has been written by Ka Wai Audrey Tsang, 2020</p>
