--- a/Lab_3/index.html
+++ b/Lab_3/index.html
@@ -1,49 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+  <head>
     <meta charset="UTF-8" />
     <title>AUDREY'S LAB3</title>
-    <link href="https://fonts.googleapis.com/css2?family=Srisakdi:wght@400;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Srisakdi:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link href="./style.css" rel="stylesheet" />
     <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    </head>
+  </head>
 
-    <body>
-        <header>
-            <h1>AUDREY'S CAT</h1>
-            <img src="./dove.png" alt="BIRD">
-            <nav>
-            <ul>
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">GET STARTED</a></li>
-                <li><a href="#">PHOTOS</a></li>
-                <li><a href="#">GEAR</a></li>
-                <li><a href="#">FORUM</a></li>
-           </ul>
-            </nav>
-        </header>
-        <main>
-           <article>
-               <h2>WELCOME</h2>
-               <p>Welcome to my british shorthair cat page!</p>
-               <P>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</P>
-            </article>
-           <aside>
-               <h2>FAVOURITE PHOTOS</h2>
-               
-               <div class="img_row">
-               <a href="./cat3.jpg"><img src="./cat3_th.jpg" alt="baby white british shorthair cat, blue eyes, long tail"></a>
-               <a href="./cat2.jpg"><img src="./cat2_th.jpg" alt="baby blue and white british shorthair cat, red nose, blue eyes"></a>
-               <a href="./cat1.jpg"><img src="./cat1_th.jpg" alt="baby golden british shorthair cat, green eyes, white flur on neck, pink nose "></a>
-               <a href="./cat4.jpg"><img src="./cat4_th.jpg" alt="baby blue british shorthair, blue eyes, brown nose"></a>
-            </div>
-            </aside>
-        </main>
-        <footer>
-           <p>This website example has been written by Ka Wai Audrey Tsang, 2020</p>
-           <p><a href="http://game-icons.net/lorc/originals/dove.html">Dove icon</a> by Lorc.</p>
-        </footer>
-    </body>
+  <body>
+    <header>
+      <h1>AUDREY'S CAT</h1>
+      <img src="./dove.png" alt="BIRD" />
+      <nav>
+        <ul>
+          <li><a href="#">HOME</a></li>
+          <li><a href="#">GET STARTED</a></li>
+          <li><a href="#">PHOTOS</a></li>
+          <li><a href="#">GEAR</a></li>
+          <li><a href="#">FORUM</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <article>
+        <h2>WELCOME</h2>
+        <p>Welcome to my british shorthair cat page!</p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+      </article>
+      <aside>
+        <h2>FAVOURITE PHOTOS</h2>
+
+        <div class="img_row">
+          <a href="./cat3.jpg"
+            ><img
+              src="./cat3_th.jpg"
+              alt="baby white british shorthair cat, blue eyes, long tail"
+          /></a>
+          <a href="./cat2.jpg"
+            ><img
+              src="./cat2_th.jpg"
+              alt="baby blue and white british shorthair cat, red nose, blue eyes"
+          /></a>
+          <a href="./cat1.jpg"
+            ><img
+              src="./cat1_th.jpg"
+              alt="baby golden british shorthair cat, green eyes, white flur on neck, pink nose "
+          /></a>
+          <a href="./cat4.jpg"
+            ><img
+              src="./cat4_th.jpg"
+              alt="baby blue british shorthair, blue eyes, brown nose"
+          /></a>
+        </div>
+      </aside>
+    </main>
+    <footer>
+      <p>This website example has been written by Ka Wai Audrey Tsang, 2020</p>
+      <p>
+        <a href="http://game-icons.net/lorc/originals/dove.html">Dove icon</a>
+        by Lorc.
+      </p>
+    </footer>
+  </body>
 </html>
