--- a/Assignment_1/index.html
+++ b/Assignment_1/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
     <title>Audrey's Assignment_1: HTML & CSS</title>
+    <link href="./style.css" rel="stylesheet" />
     </head>
 
     <body>
@@ -24,14 +25,14 @@
                     <ul>
                         <li>Post-configure computers and other electronic devices for various school systems</li>
                         <li>Review and verify orders to meet specific orders and customer specification </li>
-                        <li>Ensure product quality to meet company standards</li>
+                        <li>Ensure product quality to meet company standards</li></br>
                     </ul>
                     <li>Retail Store Manager</li>
                     <p>The store manager is required to regularly and customarily exercise discretion in managing the overall operation of the store. </p>
                     <ul>
                         <li>Supervised 20 staff, including the hiring and training process</li>
                         <li>Reviewed inventory to make recommendations for store input</li>
-                        <li>Reviewed daily sales total to ensure profits make the requirement</li>
+                        <li>Reviewed daily sales total to ensure profits make the requirement</li></br>
                     </ul>
                     <li>Restaurant Store Manager</li>
                     <p>Restaurant Manager responsibilities include maintaining the restaurant’s revenue, profitability and quality goals. You will ensure efficient restaurant operation, as well as maintain high production, productivity, quality, and customer-service standards.</p>
