--- a/Assignment_1/index.html
+++ b/Assignment_1/index.html
@@ -2,46 +2,45 @@
 <html lang="en">
     <head>
     <title>Audrey's Assignment_1: HTML & CSS</title>
+    <link href="https://fonts.googleapis.com/css2?family=Allan&family=Sansita+Swashed:wght@700&display=swap" rel="stylesheet">
     <link href="./style.css" rel="stylesheet" />
     </head>
-
     <body>
         <div class="header">
            <H1>KA WAI TSANG </H1>
            <img src="./logo.jpg" alt="University of Maryland Logo" >
         </div>
-
+    
         <div class ="wrapper">
-            <div class="self">
+            <div class="content">
                 <img src="./cat.jpg" alt="Image of cat">
-                <p>My professional goals are to improve my public speaking and presentation skills,
-                    gain a new skill, and start my own business one day. </p>
+                <p>My professional goals are to improve my public speaking and presentation skills,gain a new skill, and start my own business one day. </p>
             </div>
             <div class ="experience">
                 <h2>Work Expereience</h2>
-                <ol>
-                    <li>Production Technician</li>
-                    <p>Production Technicians perform equipment setup, operation, equipment adjustments and minor preventative maintenance tasks to meet all standards for safety, quality and efficiency. They run tests on all assemblies and equipment to test for safety and productivity before they are put into production.</p>
-                    <ul>
-                        <li>Post-configure computers and other electronic devices for various school systems</li>
-                        <li>Review and verify orders to meet specific orders and customer specification </li>
-                        <li>Ensure product quality to meet company standards</li></br>
-                    </ul>
-                    <li>Retail Store Manager</li>
-                    <p>The store manager is required to regularly and customarily exercise discretion in managing the overall operation of the store. </p>
-                    <ul>
-                        <li>Supervised 20 staff, including the hiring and training process</li>
-                        <li>Reviewed inventory to make recommendations for store input</li>
-                        <li>Reviewed daily sales total to ensure profits make the requirement</li></br>
-                    </ul>
-                    <li>Restaurant Store Manager</li>
-                    <p>Restaurant Manager responsibilities include maintaining the restaurant’s revenue, profitability and quality goals. You will ensure efficient restaurant operation, as well as maintain high production, productivity, quality, and customer-service standards.</p>
-                    <ul>
-                        <li>Resolved customer complaints by phone and in-person</li>
-                        <li>Served an interface between customers and management</li>
-                        <li>Managed the transaction record from cash to electronic transactions</li>
-                    </ul>
-                </ol>
+                    <ol>
+                        <h3><li>Production Technician</li></h3>
+                        <p>Production Technicians perform equipment setup and minor preventative maintenance tasks to meet all standards for safety. </p>
+                        <ul>
+                            <li>Post-configure computers and other electronic devices for various school systems</li>
+                            <li>Review and verify orders to meet specific orders and customer specification </li>
+                            <li>Ensure product quality to meet company standards</li></br>
+                        </ul>
+                        <h3><li>Retail Store Manager</li></h3>
+                        <p>The store manager is required to regularly and customarily exercise discretion in managing the overall operation of the store. </p>
+                        <ul>
+                            <li>Supervised 20 staff, including the hiring and training process</li>
+                            <li>Reviewed inventory to make recommendations for store input</li>
+                            <li>Reviewed daily sales total to ensure profits make the requirement</li></br>
+                        </ul>
+                        <h3><li>Restaurant Store Manager</li></h3>
+                        <p>Restaurant Manager responsibilities include maintaining the restaurant’s revenue, profitability and quality goals. </p>
+                        <ul>
+                            <li>Resolved customer complaints by phone and in-person</li>
+                            <li>Served an interface between customers and management</li>
+                            <li>Managed the transaction record from cash to electronic transactions</li>
+                        </ul>
+                    </ol>
             </div>
 
         </div>
