--- a/Assignment_1/index.html
+++ b/Assignment_1/index.html
@@ -13,34 +13,36 @@
     
         <div class ="wrapper">
             <div class="content">
-                <img src="./cat.jpg" alt="Image of cat">
-                <p>My professional goals are to improve my public speaking and presentation skills,gain a new skill, and start my own business one day. </p>
-            </div>
-            <div class ="experience">
-                <h2>Work Expereience</h2>
-                    <ol>
-                        <h3><li>Production Technician</li></h3>
-                        <p>Production Technicians perform equipment setup and minor preventative maintenance tasks to meet all standards for safety. </p>
-                        <ul>
-                            <li>Post-configure computers and other electronic devices for various school systems</li>
-                            <li>Review and verify orders to meet specific orders and customer specification </li>
-                            <li>Ensure product quality to meet company standards</li></br>
-                        </ul>
-                        <h3><li>Retail Store Manager</li></h3>
-                        <p>The store manager is required to regularly and customarily exercise discretion in managing the overall operation of the store. </p>
-                        <ul>
-                            <li>Supervised 20 staff, including the hiring and training process</li>
-                            <li>Reviewed inventory to make recommendations for store input</li>
-                            <li>Reviewed daily sales total to ensure profits make the requirement</li></br>
-                        </ul>
-                        <h3><li>Restaurant Store Manager</li></h3>
-                        <p>Restaurant Manager responsibilities include maintaining the restaurant’s revenue, profitability and quality goals. </p>
-                        <ul>
-                            <li>Resolved customer complaints by phone and in-person</li>
-                            <li>Served an interface between customers and management</li>
-                            <li>Managed the transaction record from cash to electronic transactions</li>
-                        </ul>
-                    </ol>
+                <div class="goal"></div>
+                    <img src="./cat.jpg" alt="Image of cat">
+                    <p>My professional goals are to improve my public speaking and presentation skills,gain a new skill, and start my own business one day. </p>
+                </div>
+                <div class ="experience">
+                    <h2>Work Expereience</h2>
+                        <ol>
+                            <h3><li>Production Technician</li></h3>
+                            <p>Production Technicians perform equipment setup and minor preventative maintenance tasks to meet all standards for safety. </p>
+                            <ul>
+                                <li>Post-configure computers and other electronic devices for various school systems</li>
+                                <li>Review and verify orders to meet specific orders and customer specification </li>
+                                <li>Ensure product quality to meet company standards</li></br>
+                            </ul>
+                            <h3><li>Retail Store Manager</li></h3>
+                            <p>The store manager is required to regularly and customarily exercise discretion in managing the overall operation of the store. </p>
+                            <ul>
+                                <li>Supervised 20 staff, including the hiring and training process</li>
+                                <li>Reviewed inventory to make recommendations for store input</li>
+                                <li>Reviewed daily sales total to ensure profits make the requirement</li></br>
+                            </ul>
+                            <h3><li>Restaurant Store Manager</li></h3>
+                            <p>Restaurant Manager responsibilities include maintaining the restaurant’s revenue, profitability and quality goals. </p>
+                            <ul>
+                                <li>Resolved customer complaints by phone and in-person</li>
+                                <li>Served an interface between customers and management</li>
+                                <li>Managed the transaction record from cash to electronic transactions</li>
+                            </ul>
+                        </ol>
+                </div>
             </div>
 
         </div>
