--- a/Assignment_1/index.html
+++ b/Assignment_1/index.html
@@ -13,7 +13,7 @@
     
         <div class ="wrapper">
             <div class="content">
-                <div class="goal"></div>
+                <div class="goal">
                     <img src="./cat.jpg" alt="Image of cat">
                     <p>My professional goals are to improve my public speaking and presentation skills,gain a new skill, and start my own business one day. </p>
                 </div>
