--- a/Lab_5/index.html
+++ b/Lab_5/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab 5</title>
+
 </head>
 <body>
-    
+    <header>Audrey's List Of Countries</header>
+    <button>CLICK!!</button>
+    <script src="scripts.js"></script>
 </body>
 </html>
