--- a/Lab_6/index.html
+++ b/Lab_6/index.html
@@ -6,24 +6,24 @@
     <title>Audrey's Lab 6</title>
     <link rel="stylesheet" href="css/form_styles.css">
 </head>
-<body>
-    <header>
-        <h1>HTML Forms Lab</h1>
-    </header>
-    <form action="https://fierce-taiga-97625.herokuapp.com/lab" method="POST">
-        <ul>
-            <li>
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" maxlength="140">
-            </li>
-            <li>
-                <label for="interest">Interest:</label>
-                <textarea id="interest" name="user_interests" rows="5" cols="33"></textarea>
-            </li>
-            <li class="button">
-                <button type="submit">Submit</button>
-              </li>
-        </ul>
-    </form>
-</body>
+    <body>
+        <header>
+            <h1>HTML Forms Lab</h1>
+        </header>
+        <form action="https://fierce-taiga-97625.herokuapp.com/lab" method="POST">
+            <ul>
+                <li>
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" maxlength="140">
+                </li>
+                <li>
+                    <label for="interest">Interest:</label>
+                    <textarea id="interest" name="interests" rows="5" cols="33"></textarea>
+                </li>
+                <li class="button">
+                    <button type="submit">Submit</button>
+                </li>
+            </ul>
+        </form>
+    </body>
 </html>
