--- a/assignment_2/public/assignment2.html
+++ b/assignment_2/public/assignment2.html
@@ -148,6 +148,16 @@
         </div>
 
 
+        <div class="flexbox-item">
+            -- Search Tasks --
+            <label for="searchtask">searchtask:</label>
+            <input type="text" id="searchtask" name="searchtask"/>
+            <br>
+            <ul class = "suggestions">
+            </ul>
+        </div>
+
+
     </div>
 </body>
 
